--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
     <link rel="manifest" href="manifest.json" />
   </head>
   <body>
-    <script src="flutter_bootstrap.js" async></script>
+    <script src="main.dart.js" async></script>
   </body>
 </html>
+
 
 
